# datahaus

./: .env.example  .gitignore  LICENSE  Makefile  OPERATIONS.md  README.md  pyproject.toml
compute/: ingest_klines.py  reconciliation.py
compute/adapters/: __init__.py  base.py  binance.py  bybit.py  okx.py
docs/: README.md  architecture.md  developer_guide.md  operations_manual.md  phase1_acceptance.md  phase2_acceptance.md  process_flow.md
observability/: alert_router.py
observability/soda_checks/: binance_ohlcv.yml  btc_ohlcv.yml  bybit_ohlcv.yml  configuration.yml  okx_ohlcv.yml
pipelines/: binance_klines_1m.py  bybit_klines_1m.py  okx_klines_1m.py  reconciliation_dag.py
runbooks/: RB-01-binance-freshness.md  RB-02-bybit-freshness.md  RB-03-okx-freshness.md  RB-04-spread-divergence.md
scripts/: chaos_clear.py  chaos_freshness.py  chaos_spread.py  migrate_phase2.py
tests/: test_adapters.py  test_ingest.py  test_reconciliation.py
warehouse/: schema.sql
